# crypt-sync

./: Cargo.toml  README.md  run.sh
src/: clargs.rs  crypt_encoder.rs  crypt_syncer.rs  cryptor.rs  hasher.rs  main.rs  util.rs
src/crypt/: crypt_encoder.rs  crypt_file.rs  crypt_syncer.rs  mod.rs
src/encoder/: cryptor.rs  mod.rs  text_decoder.rs  text_encoder.rs  zstd_decoder.rs  zstd_encoder.rs
src/encoders/: cryptor.rs  mod.rs  text_decoder.rs  text_encoder.rs
