[package]
name = "crypt-sync"
version = "0.1.0"
authors = ["Jack <jchoi5@me.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
# documentation = "https://docs.rs/colmac"
repository = "https://github.com/jchoi5me/crypt-sync"

[dependencies]
colmac = "0.1.1"
data-encoding = "2.1.2"
data-encoding-macro = "0.1.7"
openssl = "0.10.26"
rayon = "1.1"
ring = "0.16.9"
static_assertions = "1.1.0"
structopt = "0.2"
tempfile = "3"
text_io = "0.1.7"
walkdir = "2"
zstd = "0.4"
